tests/baselines/reference/assignmentCompatPredicates17.errors.txt
tests/cases/compiler/assignmentCompatPredicates17.ts(13,5): error TS2322: Type 'PrivateMessage' is not assignable to type '{ text: string; userid: number; }'.
  Property 'userid' is not present in type 'PrivateMessage'.


==== tests/cases/compiler/assignmentCompatPredicates17.ts (1 errors) ====
    
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } with {
        present(text);
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    }
    
    let pm1: PrivateMessage = {text: "Hi!", userid: 42, screenname: undefined};
    let pm2: {text: string, userid: number} = pm1;
        ~~~
!!! error TS2322: Type 'PrivateMessage' is not assignable to type '{ text: string; userid: number; }'.
!!! error TS2322:   Property 'userid' is not present in type 'PrivateMessage'.